<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">


    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:id="@+id/enter_numbers"
        android:textAlignment="gravity"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="49dp" />

    <TableLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_below="@+id/enter_numbers"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/table">

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/AC"
                android:id="@+id/button_AC"
                android:layout_column="5"
                android:onClick="onClick" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/button_neg_pos"
                android:id="@+id/button_negative_positive"
                android:layout_column="8"
                android:onClick="onClick" />


            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/per_cent"
                android:id="@+id/button_per_cent"
                android:layout_column="12"
                android:onClick="onClick" />

        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/division"
                android:id="@+id/button_division"
                android:layout_column="5"
                android:onClick="onClick" />


            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/multiplication"
                android:id="@+id/button_multiplication"
                android:layout_column="8"
                android:onClick="onClick" />



            <Button
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/negation"
                android:id="@+id/button_negation"
                android:layout_column="12"
                android:onClick="onClick" />


        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <Button
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sum"
                android:layout_marginBottom="20dp"
                android:id="@+id/button_sum"
                android:layout_column="5"
                android:onClick="onClick" />


            <Button
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/equal"
                android:layout_marginBottom="20dp"
                android:id="@+id/button_equal"
                android:layout_column="8"
                android:onClick="onClick" />


        </TableRow>


        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <Button
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/b7"
                android:id="@+id/button_7"
                android:layout_column="5"
                android:onClick="onClick" />


            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/b8"
                android:id="@+id/button_8"
                android:layout_column="8"
                android:onClick="onClick" />


            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/b9"
                android:id="@+id/button_9"
                android:layout_column="12"
                android:onClick="onClick" />

        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/b4"
                android:id="@+id/button_4"
                android:layout_column="5"
                android:onClick="onClick" />


            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/b5"
                android:id="@+id/button_5"
                android:layout_column="8"
                android:onClick="onClick" />


            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/b6"
                android:id="@+id/button_6"
                android:layout_column="12"
                android:onClick="onClick" />

        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <Button
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/b1"
                android:id="@+id/button_1"
                android:layout_column="5"
                android:onClick="onClick" />


            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/b2"
                android:id="@+id/button_2"
                android:layout_column="8"
                android:onClick="onClick" />


            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/b3"
                android:id="@+id/button_3"
                android:layout_column="12"
                android:onClick="onClick" />

        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/b0"
                android:id="@+id/button_0"
                android:layout_column="5"
                android:onClick="onClick" />


            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bDot"
                android:id="@+id/button_dot"
                android:layout_column="8"
                android:onClick="onClick" />


            <Button
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/happy_button"
                android:id="@+id/happy_button"
                android:layout_column="12" />
        </TableRow>

    </TableLayout>


</RelativeLayout>
